GPencil: Stroke Cutter delete all strokes if they are selected and the layer is locked #87058

Closed
opened 2021-03-30 19:13:18 +02:00 by Miya San · 4 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-29 22:00, hash: 91c44fe885
Worked: (newest version of Blender that worked as expected)

Short description of error
Reproducing the steps in #69634 with a simple drawing will not result in any problems, but when working with multiple keyframes and more complex drawings, this error occurs.
Using the Stroke Cutter Tool, will remove everything on locked layers, locking all layers and cutting will remove every stroke.
Exact steps for others to reproduce the error
Use provided .blend
cutter_lock_bug_2.93.blend
Use Stroke Cutter Tool, alternative between locking layers
Stroke_cutter_bug.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-29 22:00, hash: `91c44fe885` Worked: (newest version of Blender that worked as expected) **Short description of error** Reproducing the steps in #69634 with a simple drawing will not result in any problems, but when working with multiple keyframes and more complex drawings, this error occurs. Using the Stroke Cutter Tool, will remove everything on locked layers, locking all layers and cutting will remove every stroke. **Exact steps for others to reproduce the error** Use provided .blend [cutter_lock_bug_2.93.blend](https://archive.blender.org/developer/F9914774/cutter_lock_bug_2.93.blend) Use Stroke Cutter Tool, alternative between locking layers [Stroke_cutter_bug.mp4](https://archive.blender.org/developer/F9914779/Stroke_cutter_bug.mp4)
Author

Added subscriber: @miya

Added subscriber: @miya

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2021-03-30 19:25:57 +02:00
Antonio Vazquez changed title from Stroke Cutter 'gpencil.stroke_cutter' Removes Everything on Locked Layers to GPencil: Stroke Cutter delete all strokes if they are selected and the layer is locked 2021-03-30 19:40:24 +02:00

This issue was referenced by 67b40f829e

This issue was referenced by 67b40f829e29ce7006de30ebcc75cf8ef82da269

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87058
No description provided.