Fix T87058: GPencil Cutter delete all strokes if they are selected and the layer is locked

The problem was produced because the strokes were selected, but the loop to clear this flag before applying cutter was using unlocked layers only, and the protected layer flag was not reset.

Now, the flag is reset for all layers, locked and unlocked.